chore(package.json): firebase and update react-doc-viewer

--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^2.8.1",
+    "@cyntler/react-doc-viewer": "^1.14.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.2",
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.0",
+    "firebase": "^10.6.0",
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
-    "react-doc-viewer": "^0.1.5",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
